2003-07-17  Dennis Cranston <dennis_cranston at yahoo com>

	* gnome-keyboard-properties.glade, 
	  gnome-keyboard-properties.c:  Fixes for ui-review
	  bug report #99531 and fixes for duplicate mnemonics.
 
2003-07-07  Jody Goldberg <jody@gnome.org>

	* Release 2.3.4

2003-06-27  Richard Hult  <richard@imendio.com>

	* gnome-keyboard-properties.c (setup_dialog): Use the right gconf
	key for allow_postpone preference.

	* gnome-keyboard-properties.glade: Remove warn time preference,
	it's not used in the code.

Thu Jun 26 16:31:41 2003  Jonathan Blandford  <jrb@redhat.com>

	* gnome-keyboard-properties.c (setup_dialog): use the correct
	schemas.

Thu Jun 26 07:39:34 2003  Jonathan Blandford  <jrb@gnome.org>

	* gnome-keyboard-properties.c: added the typing break (drwright)
	preferences

2003-06-24  Jody Goldberg <jody@gnome.org>

	* Release 2.3.3

2003-05-07  Jody Goldberg <jody@gnome.org>

	* Release 2.3.1

2003-04-30  Jody Goldberg <jody@gnome.org>

	* gnome-keyboard-properties.glade : make the repeat bounds more
	  reasonable.

Tue Feb  4 17:09:18 2003  Jonathan Blandford  <jrb@redhat.com>

	* Release 2.2.0.1

Tue Jan 21 01:15:14 2003  Jonathan Blandford  <jrb@gnome.org>

	* Release 2.2.0

Thu Jan 16 02:41:09 2003  Jonathan Blandford  <jrb@gnome.org>

	* Release 2.1.7

2003-01-14  Jody Goldberg <jody@gnome.org>

	* gnome-keyboard-properties.c (accessibility_button_clicked) : fix
          minor typo that disables the error dialog in the event of failure.

2003-01-10  Jody Goldberg <jody@gnome.org>

	* Release 2.1.6

2002-12-18  Jody Goldberg <jody@gnome.org>

	* Release 2.1.5

2002-12-10  Rajkumar Sivasamy <rajkumar.siva@wipro.com>

	* gnome-keyboard-properties.glade: Set the visibility and focus 
	  of Custom radio button in Sound note book page to false.
	  Fixes bug 99793

2002-11-23  Jody Goldberg <jody@gnome.org>

	* Release 2.1.3

2002-11-02  Jody Goldberg <jody@gnome.org>

	* Release 2.1.2

2002-10-21  Jody Goldberg <jody@gnome.org>

	* Release 2.1.1
