@@ -1,3 +1,8 @@
+Thu Jul 31 17:42:13 2003  Jonathan Blandford  <jrb@redhat.com>
+
+	* gnome-keyboard-properties.c (main): Add typing-break properties,
+	#118323
+
 2003-07-17  Dennis Cranston <dennis_cranston at yahoo com>
 
 	* gnome-keyboard-properties.glade, 
